kube/manifests/adguard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: default
  labels:
    app: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      hostname: adguard
      containers:
        - name: adguard
          image: adguard/adguardhome:latest
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
            - containerPort: 784
              protocol: UDP
            - containerPort: 853
              protocol: TCP
            - containerPort: 853
              protocol: UDP
            - containerPort: 3000
              protocol: TCP
            - containerPort: 5443
              protocol: TCP
            - containerPort: 5443
              protocol: UDP
          resources:
            requests:
              cpu: "0.25"
              memory: "256Mi"
            limits:
              cpu: "0.5"
              memory: "512Mi"
          volumeMounts:
            - name: adguard-data
              mountPath: /opt/adguardhome/work
            - name: adguard-config
              mountPath: /opt/adguardhome/conf
      volumes:
        - name: adguard-data
          persistentVolumeClaim:
            claimName: adguard-work-pvc
        - name: adguard-config
          hostPath:
            path: /home/imyjer/repos/pi/kube/config/adguard/
            type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: default
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.0.67
    metallb.universe.tf/address-pool: adguard-pool
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: adguard
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: quic
      protocol: UDP
      port: 784
      targetPort: 784
    - name: dot-tcp
      protocol: TCP
      port: 853
      targetPort: 853
    - name: dot-udp
      protocol: UDP
      port: 853
      targetPort: 853
    - name: adguard-ui
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: dns-https-tcp
      protocol: TCP
      port: 5443
      targetPort: 5443
    - name: dns-https-udp
      protocol: UDP
      port: 5443
      targetPort: 5443
