kube/manifests/foodini.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: foodini
  namespace: default
  labels:
    app: foodini

spec:
  replicas: 1
  selector:
    matchLabels:
      app: foodini
  template:
    metadata:
      labels:
        app: foodini
    spec:
      containers:
        - name: foodini
          image: foodini:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "0.50"
              memory: "512Mi"
            limits:
              cpu: "1.0"
              memory: "1024Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: foodini
  namespace: default

spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
  selector:
    app: foodini
