kube/manifests/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
spec:
  defaultBackend:
    service:
      name: whoami
      port:
        number: 8001
  ingressClassName: tailscale
  tls:
    - hosts:
        - whoami
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
spec:
  defaultBackend:
    service:
      name: pihole
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - pihole
